# CN_Final_Project

./: README.md  community_enrichment.ipynb  main.py  pyproject.toml
data/: breast cancer.sif  disgenet.tsv  disgenet_breast.tsv  disgenet_lung.tsv  disgenet_ovarian.tsv  lung cancer.sif  ovarian cancer.sif
results/: breast_community_assignments.csv  breast_community_metrics.csv  breast_failure_attack_thresholds.csv  breast_micro_node.json  breast_sir_curves.csv  breast_sir_summary.csv  breast_sir_sweep.csv  lung_community_assignments.csv  lung_community_metrics.csv  lung_failure_attack_curves.csv  lung_macro.json  lung_sir_sweep.csv  ovarian_community_assignments.csv  ovarian_community_metrics.csv  ovarian_failure_attack_curves.csv  ovarian_micro.json  ovarian_micro_node.json  ovarian_sir_curves.csv  ovarian_sir_summary.csv  ovarian_sir_sweep.csv
results/1_structural_characterization/: breast_backbone_edges.csv  breast_backbone_nodes.csv  breast_backbone_summary.json  breast_backbone_top_nodes.csv  breast_core_numbers.csv  breast_macro.json  breast_micro.json  consensus_backbone_edges.csv  consensus_backbone_nodes.csv  consensus_backbone_summary.csv  lung_backbone_edges.csv  lung_backbone_nodes.csv  lung_backbone_summary.json  lung_backbone_top_nodes.csv  lung_core_numbers.csv  lung_micro.json  lung_micro_node.json  ovarian_backbone_edges.csv  ovarian_backbone_nodes.csv  ovarian_backbone_summary.json  (+3 more)
src/: backbone.py  community.py  dysfunction_propagation.py  edge_prediction.py  epidemic_spreading.py  macroscopic.py  microscopic.py  percolation.py  utils.py
(+30 files in other folders)
