[project]
name = "cn-final-project"
version = "0.1.0"
description = "Comparative Topology of Multiple Onco-PPI Networks"
requires-python = ">=3.11"

dependencies = [
    # Network analysis
    "networkx>=3.3",
    "igraph>=0.11",
    "leidenalg>=0.10",
    "python-louvain>=0.16",        # community (import as community)

    # Data wrangling
    "pandas>=2.2",
    "numpy>=1.26",

    # Biological enrichment & annotations
    "gprofiler-official>=1.0",     # GO enrichment via g:Profiler

    # Power-law fitting
    "powerlaw>=1.5",

    # Plotting
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
    "upsetplot>=0.9",              # UpSet plots for overlap analysis

    # Utilities
    "tqdm>=4.66",
    "scipy>=1.13",
    "scikit-learn>=1.5",           # AUC, cross-validation for link prediction
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "nbformat>=5.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
[tool.uv.workspace]
members = ["."]